# escorpionico-repo

./: .gitignore  README.md  pyproject.toml
data/: dataset_amostra.csv  dataset_amostra_stats.csv  dataset_amostra_stats_media_uf.csv  dataset_ibge_datasus.csv  dataset_ibge_datasus.parquet
data/ibge/: dataset_pop_area_urb.csv
data/ibge/populacao/: TabelaSIDRA6579.xlsx  dataset_populacao.csv
data/ibge/urbanizacao/: AR_BR_RG_UF_RGINT_MES_MIC_MUN_2022.xls  areas_por_recorte_territorial_2019.xlsx  dataset_area.csv  dataset_area_urb.csv
data/sinan_datasus/: dataset_acidente_escorpião.xlsx  dataset_nnae.csv  sinannet_cnv_animaisbr.csv  sinannet_cnv_animaisbr112720189_70_211_56.csv  ~$dataset_acidente_escorpião.xlsx
scripts/: 01_preparando_dados_datasus.py  02_preparando_dados_ibge.py  03_unindo_datasets.py  04_filtrando_dados.py  05_estatistica.py  06_correlacao.py  07_mapas.py  07_preparando_geodados.py  07_preparando_geodados_estadual.py  07_preparando_geodados_municipais.py  08_mapas_MUN.py  08_mapas_UF.py
