[tool.poetry]
name = "escorpionico-repo"
version = "0.1.0"
description = ""
authors = ["felipedantas-pi <tecnologo.felipedantas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
shapely = "^2.0.4"
pandas = "^2.2.2"
jupyterlab = "^4.2.3"
xlrd = "^2.0.1"
numpy = "^2.0.0"
scipy = "^1.14.0"
seaborn = "^0.13.2"
lonboard = "^0.9.3"
openpyxl = "^3.1.5"
mapclassify = "^2.7.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
